# flite-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: make_waveform.rs  play_with_control.rs  tts.rs
src/: bindings.rs  lib.rs
