[package]
name = "fliters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr = "0.2.11"
hound = "3.5"
rodio = { version = "0.17.1", default_features = false, features = ["wav"] }

[build-dependencies]
cc = "1.0.83"
# bindgen = "0.65.1"
